<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".VerifyRobotActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/select_light"
        android:textSize="22sp"
        android:textStyle="italic"
        android:textColor="#635E5E"/>


    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:numColumns="3"
        android:id="@+id/grid_view"
        android:layout_marginVertical="20dp"
        />

    <RelativeLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_robot"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/refresh"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="3dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="10dp"
        android:textColor="#fff"
        android:background="@color/colorButton"/>

</LinearLayout>